--- a/presentation.html
+++ b/presentation.html
@@ -231,9 +231,12 @@ Sensation seeking         0.16</pre></li>
 
 <ol class = 'build'>
 <li>Can we improve between-person proportion of variance?</li>
-<li>Can we distinguish risk-tolerance from learning?</li>
-<li>Does this improve convergent correlations?</li>
-<li>Are there differences in peer effects across parameters?</li>
+<li>Can we distinguish risk-tolerance from learning?
+
+<ul class = 'build'>
+<li>&#8230; and are there differences in peer effects across parameters?</li>
+</ul></li>
+<li>How do these modeling choices affect convergent correlations?</li>
 </ol>
 
 </article></slide><slide class=""><hgroup><h2>The data to model</h2></hgroup><article  id="the-data-to-model">
@@ -242,7 +245,7 @@ Sensation seeking         0.16</pre></li>
 
 <p><img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_descriptives_and_diagnostics_files/figure-html/rawpropplot-1.png' style = 'width: 100%' /></p>
 
-</article></slide><slide class=""><hgroup><h2>Improve between-person variance</h2></hgroup><article  id="improve-between-person-variance">
+</article></slide><slide class=""><hgroup><h2>2a. Improve between-person variance</h2></hgroup><article  id="a.-improve-between-person-variance">
 
 <p>Logistic regression captures the common measure of simple proportion of non-stop intersections.</p>
 
@@ -250,7 +253,7 @@ Sensation seeking         0.16</pre></li>
 
 <p>This could be one explanation for the somewhat small correlations in the literature.</p>
 
-</article></slide><slide class=""><hgroup><h2>Diagnosing this low ICC</h2></hgroup><article  id="diagnosing-this-low-icc">
+</article></slide><slide class=""><hgroup><h2>2a. Diagnosing this low ICC</h2></hgroup><article  id="a.-diagnosing-this-low-icc">
 
 <p>Structure of task behavior: is using simple bernoulli process not appropriate?</p>
 
@@ -260,7 +263,7 @@ Sensation seeking         0.16</pre></li>
 <li>But now we have two variables to interpret!</li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Reward-learning?</h2></hgroup><article  id="reward-learning">
+</article></slide><slide class=""><hgroup><h2>2a. Reward-learning?</h2></hgroup><article  id="a.-reward-learning">
 
 <ul class = 'build'>
 <li><a href='https://jflournoy.shinyapps.io/rw_model/' title=''>Rescorla-Wagner</a> (left) is not better than logistic regression (right)
@@ -269,15 +272,137 @@ Sensation seeking         0.16</pre></li>
 <img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_expanding_the_logistic_model_files/figure-html/unnamed-chunk-6-1.png' style = 'width: 50%' /><img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_expanding_the_logistic_model_files/figure-html/brmIxTypeppcheck-1.png' style = 'width: 50%' /></div></li>
 </ul>
 
-</article></slide><slide class=""><hgroup><h2>Evidence of learning</h2></hgroup><article  id="evidence-of-learning">
+</article></slide><slide class=""><hgroup><h2>2a. Conclusion</h2></hgroup><article  id="a.-conclusion">
 
-<p>TABLE ABOUT HERE</p>
+<p>Yes, accounting for more complicated task-behavior structure improves reliability (with a possible loss of interpretability).</p>
 
-</article></slide><slide class=""><hgroup><h2>Peer influences on learning?</h2></hgroup><article  id="peer-influences-on-learning">
+</article></slide><slide class=""><hgroup><h2>2b. Distinguish learning and risk tolerance</h2></hgroup><article  id="b.-distinguish-learning-and-risk-tolerance">
 
-<p>Do people perform more optimally in either of the peer conditions?</p>
+<p><img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_questionnaire_analyses_files/figure-html/plotfittedpreds-1.png' style = 'width: 95%' /></p>
 
-<p>Are indices of learning separable from indices of risk-tolerance?</p>
+</article></slide><slide class=""><hgroup><h2>2b. Distinguish learning and risk tolerance</h2></hgroup><article  id="b.-distinguish-learning-and-risk-tolerance-1">
+
+<p><img src = 'https://jflournoy.github.io/ylglearning/articles/ylg_questionnaire_analyses_files/figure-html/plotfittedpreds-2.png' style = 'width: 95%' /></p>
+
+</article></slide><slide class=""><hgroup><h2>2b. Conclusion</h2></hgroup><article  id="b.-conclusion" class="build">
+
+<p>There are some differences in behavior between &quot;learnable&quot; intersections.</p>
+
+<p>Learning especially for late-onset intersections.</p>
+
+<p>Evidence for risk-tolerance increases for &quot;Go&quot;-after-&quot;Go&quot; non-learnable intersections.</p>
+
+<p><strong>Task behavior is more complex than we may have appreciated.</strong></p>
+
+</article></slide><slide class=""><hgroup><h2>2c. Convergent relations between Sensation seeking and &quot;Go&quot; behavior</h2></hgroup><article  id="c.-convergent-relations-between-sensation-seeking-and-go-behavior">
+
+<p>In this model, <a href='https://jflournoy.github.io/ylglearning/articles/ylg_questionnaire_analyses.html' title=''>63%</a> of the variance is between-person.</p>
+
+<p>Does modeling make a difference?</p>
+
+<p>Compare parameters during <em>Alone</em> condition</p>
+
+<ul class = 'build'>
+<li>Simple proportions model: P(Go)</li>
+<li>Full mode: P(Go|stop)<sub>M</sub>, P(Go|Go)<sub>M</sub></li>
+<li>Self-report sensation seeking from the UPPS-P (Cyders et al., 2007; Whiteside &amp; Lynam, 2001).</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>2c. Intercorrelatoins</h2></hgroup><article  id="c.-intercorrelatoins">
+
+<p><span style="font-size: .6em">
+(Probabilities transformed with normal quantile function)</span></p>
+
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="right"></th>
+<th align="right">1. SS</th>
+<th align="right">2. P(Go)</th>
+<th align="right">3. P(Go|Stop)</th>
+<th align="right">4. P(Go|Go)</th>
+<th align="right">5. Age</th>
+<th align="right">6. Sex</th>
+</tr>
+<tr class="odd">
+<td align="right"><strong>2.</strong></td>
+<td align="right"><span style="font-size:1.2em">
+0.13</span></td>
+<td align="right">1.00</td>
+<td align="right">0.91</td>
+<td align="right">0.79</td>
+<td align="right">-0.02</td>
+<td align="right">-0.07</td>
+</tr>
+<tr class="even">
+<td align="right"><strong>3.</strong></td>
+<td align="right"><span style="font-size:1.2em">
+0.17</span></td>
+<td align="right">0.91</td>
+<td align="right">1.00</td>
+<td align="right">0.57</td>
+<td align="right">-0.07</td>
+<td align="right">-0.07</td>
+</tr>
+<tr class="odd">
+<td align="right">4.</td>
+<td align="right">0.08</td>
+<td align="right">0.79</td>
+<td align="right">0.57</td>
+<td align="right">1.00</td>
+<td align="right">0.06</td>
+<td align="right">0.01</td>
+</tr>
+<tr class="even">
+<td align="right">5.</td>
+<td align="right">-0.05</td>
+<td align="right">-0.02</td>
+<td align="right">-0.07</td>
+<td align="right">0.06</td>
+<td align="right">1.00</td>
+<td align="right">0.20</td>
+</tr>
+<tr class="odd">
+<td align="right">6.</td>
+<td align="right">-0.11</td>
+<td align="right">-0.07</td>
+<td align="right">-0.07</td>
+<td align="right">0.01</td>
+<td align="right">0.20</td>
+<td align="right">1.00</td>
+</tr>
+</table>
+
+<ul class = 'build'>
+<li>P(Go|Stop) &gt; P(Go) (<em>ns</em>, t = -1.12, p &lt; .26)</li>
+<li>Regressions controlling for age and sex much the same</li>
+</ul>
+
+</article></slide><slide class=""><hgroup><h2>2c. Implications for power</h2></hgroup><article  id="c.-implications-for-power">
+
+<p><em>r</em><sub>SS.P(Go)</sub> = .13 [-.01, .28]</p>
+
+<p><em>r</em><sub>SS.P(Go|Stop)</sub> = .17 [.02, .31]</p>
+
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="left"></th>
+<th align="right"><em>r</em><sub>SS.P(Go)</sub></th>
+<th align="right"><em>r</em><sub>SS.P(Go|Stop)</sub></th>
+<th align="right">Difference</th>
+</tr>
+<tr class="odd">
+<td align="left">Obsv Power</td>
+<td align="right">42%</td>
+<td align="right">61%</td>
+<td align="right">20%</td>
+</tr>
+<tr class="even">
+<td align="left">N (Power = 80%)</td>
+<td align="right">428</td>
+<td align="right">265</td>
+<td align="right">163 (62%)</td>
+</tr>
+</table>
 
 </article></slide><slide class=""><hgroup><h2>Conclusions</h2></hgroup><article  id="conclusions">
 
@@ -424,6 +549,155 @@ Sensation seeking         0.16</pre></li>
 <p>For the opportunity to share this talk with you&#8230;</p>
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>This slide intentionally left blank</h2></hgroup><article  id="this-slide-intentionally-left-blank">
+
+</article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>YLG Statistics</h2></hgroup><article  id="ylg-statistics">
+
+</article></slide><slide class=""><hgroup><h2>2b. The numbers: Alone</h2></hgroup><article  id="b.-the-numbers-alone">
+
+<p>Reference Categories: Alone, Middle, Go | Stop</p>
+
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="left">Parameter</th>
+<th align="right">Estimate</th>
+<th align="right">l-95% CI</th>
+<th align="right">u-95% CI</th>
+</tr>
+<tr class="odd">
+<td align="left">Middle<sub>Go|Stop</sub></td>
+<td align="right">-0.08</td>
+<td align="right">-0.24</td>
+<td align="right">0.08</td>
+</tr>
+<tr class="even">
+<td align="left">Middle<sub>Go|Go</sub></td>
+<td align="right"><strong>-0.83</strong></td>
+<td align="right">-1.01</td>
+<td align="right">-0.65</td>
+</tr>
+<tr class="odd">
+<td align="left">Early<sub>go|stop</sub></td>
+<td align="right"><strong>-0.17</strong></td>
+<td align="right">-0.31</td>
+<td align="right">-0.03</td>
+</tr>
+<tr class="even">
+<td align="left">Late<sub>go|stop</sub></td>
+<td align="right"><strong>0.19</strong></td>
+<td align="right">0.03</td>
+<td align="right">0.36</td>
+</tr>
+<tr class="odd">
+<td align="left">Early<sub>go|go</sub></td>
+<td align="right"><strong>0.06</strong></td>
+<td align="right">-0.16</td>
+<td align="right">0.28</td>
+</tr>
+<tr class="even">
+<td align="left">Late<sub>go|go</sub></td>
+<td align="right"><strong>-0.24</strong></td>
+<td align="right">-0.48</td>
+<td align="right">-0.01</td>
+</tr>
+</table>
+
+</article></slide><slide class=""><hgroup><h2>2b. The numbers: Peer</h2></hgroup><article  id="b.-the-numbers-peer">
+
+<p>Reference condition: Alone, Middle, Go | Stop</p>
+
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="left">Parameter</th>
+<th align="right">Estimate</th>
+<th align="right">l-95% CI</th>
+<th align="right">u-95% CI</th>
+</tr>
+<tr class="odd">
+<td align="left">Middle<sub>Go|Stop</sub></td>
+<td align="right">-0.05</td>
+<td align="right">-0.19</td>
+<td align="right">0.08</td>
+</tr>
+<tr class="even">
+<td align="left">Middle<sub>Go|Go</sub></td>
+<td align="right">0.18</td>
+<td align="right">-0.03</td>
+<td align="right">0.38</td>
+</tr>
+<tr class="odd">
+<td align="left">Early<sub>Go|Stop</sub></td>
+<td align="right">0.06</td>
+<td align="right">-0.17</td>
+<td align="right">0.28</td>
+</tr>
+<tr class="even">
+<td align="left">Late<sub>Go|Stop</sub></td>
+<td align="right">-0.20</td>
+<td align="right">-0.43</td>
+<td align="right">0.03</td>
+</tr>
+<tr class="odd">
+<td align="left">Early<sub>go|go</sub></td>
+<td align="right">0.00</td>
+<td align="right">-0.39</td>
+<td align="right">0.38</td>
+</tr>
+<tr class="even">
+<td align="left">Late<sub>go|go</sub></td>
+<td align="right">0.29</td>
+<td align="right">-0.13</td>
+<td align="right">0.68</td>
+</tr>
+</table>
+
+</article></slide><slide class=""><hgroup><h2>2b. The numbers: Exclusion</h2></hgroup><article  id="b.-the-numbers-exclusion">
+
+<p>Reference condition: Alone, Middle, Go | Stop</p>
+
+<table class = 'rmdtable'>
+<tr class="header">
+<th align="left">Parameter</th>
+<th align="right">Estimate</th>
+<th align="right">l-95% CI</th>
+<th align="right">u-95% CI</th>
+</tr>
+<tr class="odd">
+<td align="left">Middle<sub>go|stop</sub></td>
+<td align="right">-0.10</td>
+<td align="right">-0.26</td>
+<td align="right">0.07</td>
+</tr>
+<tr class="even">
+<td align="left">Middle<sub>Go|Go</sub></td>
+<td align="right"><strong>0.40</strong></td>
+<td align="right">0.14</td>
+<td align="right">0.64</td>
+</tr>
+<tr class="odd">
+<td align="left">Early<sub>Go|Stop</sub></td>
+<td align="right">0.00</td>
+<td align="right">-0.23</td>
+<td align="right">0.23</td>
+</tr>
+<tr class="even">
+<td align="left">Late<sub>Go|Stop</sub></td>
+<td align="right">-0.15</td>
+<td align="right">-0.39</td>
+<td align="right">0.08</td>
+</tr>
+<tr class="odd">
+<td align="left">Early<sub>go|go</sub></td>
+<td align="right">-0.23</td>
+<td align="right">-0.62</td>
+<td align="right">0.14</td>
+</tr>
+<tr class="even">
+<td align="left">Late<sub>go|go</sub></td>
+<td align="right">0.34</td>
+<td align="right">-0.05</td>
+<td align="right">0.72</td>
+</tr>
+</table>
 
 </article></slide><slide class="segue dark nobackground level1"><hgroup class = 'auto-fadein'><h2>Extras</h2></hgroup><article  id="extras">
 
